--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@ should have a prior knowledge of git and version control, in the process we deci
     <section class="resume-section" id="about">
       <div class="resume-section-content">
         <h1 class="mb-0 text-center">
-          <span class="text-primary">Hitik</span>
-          saini
+          <span class="text-primary">Moussa</span>
+          Kane
         </h1>
         <div class="subheading mb-5 text-center">
-          Address, email, phone
-          <a href="mailto:hitik9045saini@gmail.com">hitik9045saini@gmail.com</a>
+        
         </div>
         <img class="top-img " src="sources/my_website1.svg" alt="">
-        <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p class="lead mb-5"> Hey my name is moussa I am a student at baltimore polytechnic. 
+          I aspire to be a professional engineer and would like to be a studeng at MIT and build 
+          my own company by the name of Mkane labs.</p>
         <div class="social-icons">
           <a target="_blank" class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
           <a target="_blank" class="social-icon" href="#"><i class="fab fa-github"></i></a>
