--- a/index.html
+++ b/index.html
@@ -63,11 +63,7 @@ should have a prior knowledge of git and version control, in the process we deci
         <p class="lead mb-5"> Hey my name is moussa I am a student at baltimore polytechnic. 
           I aspire to be a professional engineer and would like to be a studeng at MIT and build 
           my own company by the name of Mkane labs.</p>
-        <div class="social-icons">
-          <a target="_blank" class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a target="_blank" class="social-icon" href="#"><i class="fab fa-github"></i></a>
-          <a target="_blank" class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-          <a target="_blank" class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+        
         </div>
       </div>
     </section>
@@ -80,9 +76,10 @@ should have a prior knowledge of git and version control, in the process we deci
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
             <h3 class="mb-0">Heading</h3>
-            <div class="subheading mb-3">Sub Heading, details</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="subheading mb-3"> My expirence includes being able to design different objects and structual designes
+            seeing as im part of a program at poly by the name of PTLW where i will have the experience to learn about a few engineering
+            fields that will prove to be quite beneficial in the future as I grow to explore the different fields i would like to dive deeper into</div>
+            <p> </p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
         </div>
