--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@ should have a prior knowledge of git and version control, in the process we deci
             <div class="subheading mb-3"> My expirence includes being able to design different objects and structual designes
             seeing as im part of a program at poly by the name of PTLW where i will have the experience to learn about a few engineering
             fields that will prove to be quite beneficial in the future as I grow to explore the different fields i would like to dive deeper into</div>
-            <p> </p>
+            <p> Even though I have gained all of these experiences nothing will come out of it without full dedication and hard work. As commitment is true
+            success but back to the other topic I would really like to be a mechanical engineers seeing as the deal with more hands and building and improvements
+            to better the lives of many and to allow our world to evolve and become trully sucessful and allow the ecologicall and environmental factors of our 
+              to continue to improve.f</p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
         </div>
