--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@ should have a prior knowledge of git and version control, in the process we deci
             <div class="subheading mb-3"> My expirence includes being able to design different objects and structual designes
             seeing as im part of a program at poly by the name of PTLW where i will have the experience to learn about a few engineering
             fields that will prove to be quite beneficial in the future as I grow to explore the different fields i would like to dive deeper into</div>
-            <p> Even though I have gained all of these experiences nothing will come out of it without full dedication and hard work. As commitment is true
-            success but back to the other topic I would really like to be a mechanical engineers seeing as the deal with more hands and building and improvements
-            to better the lives of many and to allow our world to evolve and become trully sucessful and allow the ecologicall and environmental factors of our 
-              to continue to improve.f</p>
+            <p> .f</p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
         </div>
@@ -90,8 +87,10 @@ should have a prior knowledge of git and version control, in the process we deci
           <div class="flex-grow-1">
             <h3 class="mb-0">Heading</h3>
             <div class="subheading mb-3">Sub Heading, details</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Even though I have gained all of these experiences nothing will come out of it without full dedication and
+              hard work. As commitment is true success but back to the other topic I would really like to be a mechanical engineers 
+              seeing as the deal with more hands and building and improvements to better the lives of many and to allow our world to 
+              evolve and become trully sucessful and allow the ecologicall and environmental factors of our to continue to improve.f</p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
         </div>
