--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@ should have a prior knowledge of git and version control, in the process we deci
           <div class="flex-grow-1">
             <h3 class="mb-0">Heading</h3>
             <div class="subheading mb-3">Sub Heading, details</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p> Bottom line is that engineering is the future of our society and it would pave the path for us to true success.
+              It is our as the new generation to help show the world the power of engineering and pass it on the the new generation 
+              that why we must create and soothing enviroment for all to prosper.
+            </p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
         </div>
