--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ should have a prior knowledge of git and version control, in the process we deci
         <img class="edu-img " src="sources/education.svg" alt="">
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">University Name</h3>
+            <h3 class="mb-0">University MIT</h3>
             <div class="subheading mb-3">Bachelor of ?/ Degree details</div>
             <div>Computer Science & Engineering</div>
             <p>More details like CGPA</p>
