--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ should have a prior knowledge of git and version control, in the process we deci
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between">
           <div class="flex-grow-1">
-            <h3 class="mb-0">School name</h3>
+            <h3 class="mb-0">Baltimore polytechnic</h3>
             <div class="subheading mb-3">High School/ senior secondary</div>
             <p>More details like CGPA</p>
           </div>
