--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ should have a prior knowledge of git and version control, in the process we deci
     <section class="resume-section" id="skills">
       <div class="resume-section-content">
         <h2 class="mb-4">Skills</h2>
-        <div class="subheading mb-3">Programming Languages & Tools</div>
+        <div class="subheading mb-3">creating,engineering and building </div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item"><i class="fab fa-html5"></i></li>
           <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
